--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
         <activity android:name=".Level_4_4_1Activity" />
         <activity android:name=".Level_4_1_1Activity" />
         <activity android:name=".Level1_3Activity" />
-        <activity android:name=".Level2_1Activity"></activity>
+        <activity android:name=".Level2_1Activity" />
+        <activity android:name=".Level2_2Activity"></activity>
     </application>
 
 </manifest>
