update intent components

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".Level1_3Activity" />
         <activity android:name=".Level2_1Activity" />
-        <activity android:name=".Level2_2Activity"></activity>
+        <activity android:name=".Level2_2Activity" />
+        <activity android:name=".Level3_1Activity" />
+        <activity android:name=".LeveliamfullActivity"></activity>
     </application>
 
 </manifest>
