--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
         <activity android:name=".Level2_1Activity" />
         <activity android:name=".Level2_2Activity" />
         <activity android:name=".Level3_1Activity" />
-        <activity android:name=".LeveliamfullActivity"></activity>
+        <activity android:name=".Main22_1Activity" />
+        <activity android:name=".Main22Activity" />
+        <activity android:name=".Main22_2Activity" />
+        <activity android:name=".leveliamfull" />
+        <activity android:name=".Datas"></activity>
     </application>
 
 </manifest>
